massive rewrite of URL-escaping